arrow spacing on card fix

--- a/src/app/components/card/card.scss
+++ b/src/app/components/card/card.scss
@@ -19,7 +19,7 @@
     cursor: pointer;
     background: transparent;
     user-select: none;
-    width: 35px;
+    width: 34px;
 
     svg {
       position: relative;
